# MapReduceALPD

./: CMakeLists.txt  MapReduce.cpp  Tools.cpp  Tools.h
